added css, animations and fixed upload page

--- a/src/css/Form.module.css
+++ b/src/css/Form.module.css
@@ -1,18 +1,30 @@
-.error {
-  color: #ff0000;
-  font-size: 15px;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@1,300&display=swap');
+
+body {
+  background-color: #f2f2f2;
 }
 
 .heading {
-  font-family: 'Merriweather Sans', sans-serif;
-  font-size: 50px;
-  margin-top: 100px;
+  font-family: 'Open Sans', sans-serif;
+  font-size: 55px;
+  margin-top: 90px;
   display: flex;
   justify-content: center;
+  opacity: 0.9;
 }
 
-input[type="file"] {
-  display: none;
+.headingTwo {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 22px;
+  display: flex;
+  justify-content: center;
+  margin-top: 40px;
+  margin-bottom: 25px;
+}
+
+.formDiv {
+  display: flex; 
+  justify-content: center;
 }
 
 .formLabel {
@@ -24,11 +36,32 @@ input[type="file"] {
   border-radius: 50%;
   cursor: pointer;
   background-color: white;
-  display: flex;
-  justify-content: center;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+
+input[type="file"] {
+  display: none;
+}
+
+.formLabel div{
+  position: relative;
+  left: 7.5px;
+  bottom: 7px;
 }
 
 .formLabel:hover {
-  /* background-color: #ffb366; */
+  background-color: grey;
 }
+
+.error {
+  color: #ff0000;
+  font-size: 15px;
+}
+
+
+
+
+
+
 
